A fix (bug #6089: FOUND_ROWS returns wrong values when no table/view is used).